Supports windows (#1)
Co-authored-by: tanin <@tanin>